// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Header Bar Component should render a link when passed 1`] = `
<header
  class="with-proposition"
  id="global-header"
  role="banner"
>
  <div
    class="header-wrapper"
  >
    <div
      class="header-global"
    >
      <div
        class="header-logo"
      >
        <a
          class="content"
          href="https://www.gov.uk"
          id="logo"
          title=""
        >
          <img
            alt=""
            height="32"
            src="/govuk/images/gov.uk_logotype_crown_invert_trans.png?0.23.0"
            width="36"
          />
           GOV.UK
        </a>
      </div>
    </div>
    <div
      class="header-proposition"
    >
      <div
        class="content"
      >
        <nav
          id="proposition-menu"
        >
          <a
            href="/"
            id="proposition-name"
          >
            Lorem ipsum
          </a>
          <ul
            id="proposition-links"
          >
            <li>
              <a
                class="active"
                href="url-to-page-1"
              >
                Navigation item #1
              </a>
            </li>
            <li>
              <a
                class=""
                href="url-to-page-2"
              >
                Navigation item #2
              </a>
            </li>
            <li>
              <a
                class=""
                href="url-to-page-3"
              >
                Navigation item #3
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`The Header Bar Component should render correctly 1`] = `
<header
  class="with-proposition"
  id="global-header"
  role="banner"
>
  <div
    class="header-wrapper"
  >
    <div
      class="header-global"
    >
      <div
        class="header-logo"
      >
        <a
          class="content"
          href="https://www.gov.uk"
          id="logo"
          title=""
        >
          <img
            alt=""
            height="32"
            src="/govuk/images/gov.uk_logotype_crown_invert_trans.png?0.23.0"
            width="36"
          />
           GOV.UK
        </a>
      </div>
    </div>
    <div
      class="header-proposition"
    >
      <div
        class="content"
      >
        <nav
          id="proposition-menu"
        >
          <a
            href="/"
            id="proposition-name"
          >
            Lorem ipsum
          </a>
          <ul
            id="proposition-links"
          >
            <li>
              <a
                class="active"
                href="url-to-page-1"
              >
                Navigation item #1
              </a>
            </li>
            <li>
              <a
                class=""
                href="url-to-page-2"
              >
                Navigation item #2
              </a>
            </li>
            <li>
              <a
                class=""
                href="url-to-page-3"
              >
                Navigation item #3
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`The Header Bar Component should render correctly when no propositionHeader is passed 1`] = `
<header
  class=""
  id="global-header"
  role="banner"
>
  <div
    class="header-wrapper"
  >
    <div
      class="header-global"
    >
      <div
        class="header-logo"
      >
        <a
          class="content"
          href="https://www.gov.uk"
          id="logo"
          title=""
        >
          <img
            alt=""
            height="32"
            src="/govuk/images/gov.uk_logotype_crown_invert_trans.png?0.23.0"
            width="36"
          />
           GOV.UK
        </a>
      </div>
    </div>
  </div>
</header>
`;
